# nexus-e

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .nojekyll  404.html  LICENSE  README.md  euler_run.sbatch  index.html  mkdocs.yml  objects.inv  pyproject.toml  robots.txt  search.json  sitemap.xml  uv.toml
.github/ISSUE_TEMPLATE/: bug.yml  exploration.yml  feature_proposal.yml
.github/workflows/: ci.yaml  publish.yml
.gitlab/issue_templates/: bug.md  exploration.md  feature_proposal.md
CentIv/: __init__.py  pyproject.toml
CentIv/cgep/: __init__.py  cgep.py  change_timeperiod_resolution.py  cost.py  create_scenario_fast.py  dc_pf_trafo.py  dc_pf_trafo_flex_expansion.py  ext2int.py  gen_H2.py  gen_H2DAC_invest.py  gen_NET_invest.py  gen_battery_invest.py  gen_conventional.py  gen_conventional_CH_invest_binary.py  gen_conventional_CH_invest_continuous.py  gen_conventional_linear.py  gen_conventional_reserves.py  gen_conventional_tight.py  gen_conventional_tight_reserves2.py  gen_hydro.py  gen_invest.py  gen_nuclear_CH_invest_binary.py  gen_nuclear_CH_invest_continuous.py  reserves.py  save_results.py  system_state.py  value_format.py
Shared/Connect2Calliope/: CalliopeDataInput.m  CalliopeDataInput_PATHFNDR.m  CalliopeDataInput_PATHFNDR_v2.m  Misc_processing.m  README.txt
Shared/DBscripts/: FuncNexuse_Database_UpdateInvestments.m  README.txt  getBranchData.m  getGenData.m  getTimeSeriesFromDatabase.m
Shared/resultPostProcess/: Capacity.py  Curtailments.py  ElectricityPrice.py  PostProcess_python.py  Storage.py  cross_country_flow.py  demand.py  eMarkABM.py  eMarkDistiv.py  emissions.py  moveToMysql.py  plot_config.json  power_flow_map.py  revenue_profit.py  system_costs.py  webviewGemel.py  webviewcentiv_abm.py
docs/: .gitignore  _quarto.yml  index.qmd
modules_playlists/: .gitignore  centiv_2020_2030_2040_2050.toml  centiv_2020_2050.toml  centiv_2050.toml  centiv_2050_no_RES_target.toml  end_to_end_test.toml  euler_run.config.example  nothing.toml  postprocess_only.toml  scen_up_EU_EVFlex.toml  scen_up_EU_noEVFlex.toml  update_inv_costs.toml  upload_scenario.toml
nexus_e/: app.py  config.py  simulation.py
nexus_e/core_modules/: scenario_upload.py  update_investments.m
nexus_e/postprocess/: __init__.py  cascades.py  centiv.py  postprocess.py
scenario_data/: .gitignore
scenario_data/source_excel/: Nexuse_DB-Input_v48_TYNDP24-DE09_CentIvPV_xbNTC_NoSwissGrid.xlsx  README.txt
search/: search_index.json
src/api/: pyproject.toml
src/api/src/nexus_e_interface/: __init__.py  plugin.py  scenario.py  tables.py
src/data/: .gitignore
src/nexus_e/: app.py  config.py  database.py  execution_mode.py  simulation.py
tests/integration_tests/: test_simulation.py
tests/unit_tests/: test_api_scenario.py  test_config.py  test_cross_country_flow.py  test_database.py  test_plugins_copy_database.py  test_postprocess.py  test_postprocess_centiv.py
wiki/: home.html
wiki/developer-guide/: how-to-contribute.html  style-guide.html  (+2 more)
(+242 files in other folders)
