[project]
name = "nexus-e"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "cryptography>=44.0.2",
    "h5py==3.11.0",
    "matlabengine==23.2.3",
    "mesa==2.3.4",
    "nexus-e-interface>=0.0.3",
    "mysql-connector-python>=9.2.0",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "pandas==1.5.3",
    "pymysql==1.1.1",
    "pyomo==5.6.1",
    "pyutilib==5.8",
    "scipy==1.14.1",
    "sqlalchemy==2.0.39",
    "tomli==2.0.1",
    "tomli-w==1.0.0",
    "xlrd==1.2.0",
    "xlsxwriter==3.2.0",
]

[project.scripts]
nexus-e = "nexus_e.app:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
matlab = [
    "matlabengine<=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests/"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
